; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_nilfs2.c_grub_nilfs2_palloc_desc_block_offset.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_nilfs2.c_grub_nilfs2_palloc_desc_block_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_nilfs2_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_nilfs2_data*, i64, i64)* @grub_nilfs2_palloc_desc_block_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_nilfs2_palloc_desc_block_offset(%struct.grub_nilfs2_data* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.grub_nilfs2_data*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.grub_nilfs2_data* %0, %struct.grub_nilfs2_data** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load %struct.grub_nilfs2_data*, %struct.grub_nilfs2_data** %4, align 8
  %10 = call i64 @grub_nilfs2_palloc_groups_per_desc_block(%struct.grub_nilfs2_data* %9)
  %11 = udiv i64 %8, %10
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load %struct.grub_nilfs2_data*, %struct.grub_nilfs2_data** %4, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @grub_nilfs2_blocks_per_desc_block(%struct.grub_nilfs2_data* %14, i64 %15)
  %17 = mul nsw i32 %13, %16
  ret i32 %17
}

declare dso_local i64 @grub_nilfs2_palloc_groups_per_desc_block(%struct.grub_nilfs2_data*) #1

declare dso_local i32 @grub_nilfs2_blocks_per_desc_block(%struct.grub_nilfs2_data*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
